projects/compiler/test/typechecker/match/error_invalid_else_type.out
Error at %FILE_NAME%:7:12
Illegal operator
  |    _ s => s + 1
                ^
No operator '+' exists between types Int? and Int
